# reesd-builder

./: Dockerfile  LICENSE  Makefile  README.md  build-hello-local-graft.sh  build-hello.sh  build-info.txt  build-multi-hello-json-input.sh  build-multi-hello-no-clone.sh  build-multi-hello.sh  build.sh  checkout-and-build.sh  checkout.sh  clone.sh  ghci.conf  ghci.sh  ghcid.sh  hello.json  multi-hello.json  reesd-builder.cabal  run.sh  slack-payload.txt
Reesd/Commands/: Build.hs
